--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body {
   }
 
   .input-search {
-    @apply w-full px-4 py-2 rounded-full border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500;
+    @apply w-full px-4 py-2 rounded-full border border-gray-300 focus:outline-none focus:ring-2 ;
   }
 }
 
@@ -62,3 +62,4 @@ body {
     opacity: 1;
   }
 }
+
