--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,14 @@
 }
 
 body {
-  font-family: "Inter", sans-serif;
-  @apply bg-white text-gray-900;
+  /* font-family: "Share Tech", sans-serif;
+  font-weight: 400;
+  font-style: normal; */
+  /* @apply bg-white text-gray-900; */
+  font-family: "Playpen Sans Arabic", cursive;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
 }
 
 .rtl {
